--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
+    "prettier": "2.7.1",
     "vue-cli-plugin-vuetify": "~2.5.5",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
